2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that caused
	'player.js' and 'stats.js' to be installed without being minimized.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Refactored glassplayerhost(1) to use the integrated Webhost
	HTTP server.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/cgi-src/systemcontrol.cpp' to use the 'AddUser2'
	command for setting passwords.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'conf/glassplayerhost-site.conf.in'.
	* Removed the 'httpd' depenency from
	'glassplayerhost-fastembed.spec.in'.
	* Incremented the webhost version to 0.8.9.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed the httpd service restart from
	'glassplayerhost-fastembed.spec.in'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL' to reflect removal of httpd dependency.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed systemctl(8) commands from the %post script in
	'glassplayerhost-fastembed.spec.in'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.5.
2016-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored Metadata updates to use WebSocket connections.
2016-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored Stats updates to use WebSocket connections.
2016-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/cgi-src/stats.js' that caused the WebSocket
	connection to fail when the server was not running on port 80.
2016-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayerhost/glassplayerhost.cpp' that
	caused Metadata and Stats outputs to freeze after changing the
	receiver URL value.