@@ -106,3 +106,5 @@
 	* Fixed a bug in 'src/glassplayerhost/glassplayerhost.cpp' that
 	caused Metadata and Stats outputs to freeze after changing the
 	receiver URL value.
+2016-03-11 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the webhost version to 0.8.10.
